# ChangeLog for sci-libs/xblas
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Feb 2013; Justin Lecher <jlec@gentoo.org> xblas-1.0.248.ebuild,
  metadata.xml:
  Bump EAPI to 5

  12 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> xblas-1.0.248.ebuild:
  sci-libs/xblas: Shared library fixes, prefix love and ebuild cleanup

*xblas-1.0.248 (22 Aug 2011)

  22 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> +xblas-1.0.248.ebuild,
  +metadata.xml:
  Imported from bicatali overlay

  31 May 2011; Sébastien Fabbro <bicatali@gentoo.org> xblas-1.0.248.ebuild:
  Removed libm dependendency. Make shared lib consistent with other numeric
  libraries packages. Switched to EAPI4.

  09 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org> xblas-1.0.248.ebuild:
  Added eselect profile

  03 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org> ChangeLog:
  Initial import