@@ -8,4 +8,7 @@
   Extended and Mixed Precision versions, as documented in Chapters 2 and 4 
   of the new BLAS Standard.
 </longdescription>
+  <use>
+    <flag name="int64">Build the 64 bits integer library</flag>
+  </use>
 </pkgmetadata>
