@@ -1,6 +1,13 @@
 # ChangeLog for sci-libs/xblas
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*xblas-1.0.248-r1 (13 Oct 2014)
+
+  13 Oct 2014; Mark Wright <gienah@gentoo.org> +xblas-1.0.248-r1.ebuild,
+  metadata.xml:
+  multilib int64 multibuild xblas. The int64 build may not work though, not
+  tested.
 
   22 Feb 2013; Justin Lecher <jlec@gentoo.org> xblas-1.0.248.ebuild,
   metadata.xml:
